[package]
name = "tfg"
version = "0.1.0"
edition = "2021"

[dependencies]
hcl-rs = { git = "https://github.com/import-shiburin/hcl-rs", branch = "main" }
rnix = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
glob = "0.3"
regex = "1"
